--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>Derivação de "DIA DOS NAMORADOS"</title>
-        <meta charset="utf-8">
-    </head>
- 
-    <body>
-    <h1>FELIZ DIA DOS NAMORADOS <\h1>
-   
-    
-    
-   <\body>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <title>Título da página</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <h1> gdlhrsuhgifdusgt </h1>
+  </body>
+</html>
