--- a/index.html
+++ b/index.html
@@ -11,25 +11,35 @@
       alt= "SETE PECADOS" style="width:1500px;" style="height:2000px;">
       
    <h4> ENVY OU INVEJA </h4>
-   <p> é um homunculus frio, calculista, sarcástico, impaciente e piadista.Sua habilidade é poder transformar seu corpo no que quiser,
+   <p> É um homunculus frio, calculista, sarcástico, impaciente e piadista.Sua habilidade é poder transformar seu corpo no que quiser,
      podendo transformar seus membros até em armas.</p>
    
    
-   <h4>LUST OU LÚXURIA</h4>   
-   <p>é uma mulher muito bonita, com uma personalidade muito fria.Seu poder na luta é esticar seus dedos como lanças podendo 
+   <h4> LUST OU LÚXURIA </h4>   
+   <p> É uma mulher muito bonita, com uma personalidade muito fria.Seu poder na luta é esticar seus dedos como lanças podendo 
      cortar qualquer coisa.</p>   
    
-   <h4>GLUTTONY OU GULA</h4>
-   <p> é infantil, estranho, baixo e gordo. Tem uma gula insaciável, podendo comer qualquer coisa, até mesmo pessoas vivas.
+   <h4> GLUTTONY OU GULA </h4>
+   <p> É infantil, estranho, baixo e gordo. Tem uma gula insaciável, podendo comer qualquer coisa, até mesmo pessoas vivas.
      Inclusive a sua própria mestra.</p>
    
+   <h4> WRATH OU IRA </h4>
+   <p> Wrath são duas pessoas diferentes. No animê é um garoto, o único homunculus capaz de usar alquimia. No mangá e no Brotherhood é
+     King Bradley,muito habilidoso com armas. No mangá e no Brotherhood King Bradley empunha 2 Espadas em seu estilo de batalha mantando
+     suas vitimas em questão de segundos com sua mostruosa velocidade com as laminas.</p>
    
+   <h4> SLOTH OU PREGUIÇA </h4>
+   <p> Sloth são duas pessoas diferentes: no anime é uma mulher muito bonita que pode transformar seu corpo em água, enquanto no mangá e 
+     no Brotherhood é um homem forte.</p>
    
+   <h4> PRIDE OU ORGULHO </h4>
+   <p>é criança prodígio dos sete. Dissimulado, mentiroso, além de manipulador de mão cheia. Tudo por conta de sua aparência inofensiva, mas de uma astúcia cruel. É, sem sombra de dúvida, o mais genial dentre os homúnculos, exatamente por sempre estar em vários lugares sem ser percebido, pela sua figura infantil.
+
+© obvious: http://obviousmag.org/solidao_sociavel/2017/os-sete-pecados-em-fullmetal-alchemist-brotherhood.html#ixzz5qegcPpyy 
+Follow us: @obvious on Twitter | obviousmagazine on Facebook</p>
    
-   
-   
-   
-   
+   <h4> GREED OU GANÂNCIA </h4>
+   <p></p> 
    
     </div>
       </body>
