--- a/index.html
+++ b/index.html
@@ -10,37 +10,58 @@
      <img src = "https://4.bp.blogspot.com/-9H61I08oC7Y/WtYDewRP_1I/AAAAAAAANbA/zLdzQVmfpjQ3JvbmfYHl_dtYeQZsL2B3QCLcBGAs/s1600/234872.jpg" 
       alt= "SETE PECADOS" style="width:1500px;" style="height:2000px;">
       
+   
    <h4> ENVY OU INVEJA </h4>
-   <p> É um homunculus frio, calculista, sarcástico, impaciente e piadista.Sua habilidade é poder transformar seu corpo no que quiser,
-     podendo transformar seus membros até em armas.</p>
+   <p> É, declaradamente, o mais cretino de todos. É o estopim de todas as grandes confusões, é o assassino do Hughes, uma das cenas mais
+     dolorosas para fãs de anime em geral. Reiteradamente, sempre ele é a motivação para que se crie um problema, sempre é ele que se 
+     transforma em alguém e desequilibra a balança na história. É o mais cretino, isso é fato!</p>
    
    
    <h4> LUST OU LÚXURIA </h4>   
-   <p> É uma mulher muito bonita, com uma personalidade muito fria.Seu poder na luta é esticar seus dedos como lanças podendo 
-     cortar qualquer coisa.</p>   
+   <p> é uma personagem bem interessante: sendo a única mulher dos sete, ela faz jus a seu título: de corpo escultural, com uma beleza 
+     ímpar, sedutora e altamente manipuladora (não por ser mulher, mas por ser a personificação de tal pecado). É tradicionalmente a 
+     <em>la femme fatale</em>. E é o caso sim. Sua beleza esconde uma frieza nas ações, assim como sua grande habilidade estar em esticar suas
+     unhas como lâminas fortemente cortantes. Seu compasso entre a sedução e poder de perfuração é algo de extrema importância para a
+     construção de quem é ela, além, obviamente, da falta de preocupação com o que for a seu redor, sempre agindo como quer.
+</p>   
+   
    
    <h4> GLUTTONY OU GULA </h4>
-   <p> É infantil, estranho, baixo e gordo. Tem uma gula insaciável, podendo comer qualquer coisa, até mesmo pessoas vivas.
-     Inclusive a sua própria mestra.</p>
+   <p> É o famoso glutão, a personificação da gula. O que é mais interessante nele é exatamente a capacidade de engolir o que quiser, 
+     sem ter o mínimo discernimento do que ingere. É a atitude perfeita de alguém sob o jugo do pecado capital: apenas comer por comer.
+     É óbvio que é uma carta na manga para os interesses do grande vilão, mas é interessante como existe um reflexo metafórico muito 
+     forte neste tipo de comportamento que ele assume: Gluttony é, com maestria, uma criatura quase que irracional, ou melhor, altamente
+     infantilizada. Suas atitudes se resumem a não raciocinar muito ou querer devorar o que vê pela frente, o que gera uma grande 
+     mudança em seu rosto e traços.</p>
    
+  
    <h4> WRATH OU IRA </h4>
-   <p> Wrath são duas pessoas diferentes. No animê é um garoto, o único homunculus capaz de usar alquimia. No mangá e no Brotherhood é
-     King Bradley,muito habilidoso com armas. No mangá e no Brotherhood King Bradley empunha 2 Espadas em seu estilo de batalha mantando
-     suas vitimas em questão de segundos com sua mostruosa velocidade com as laminas.</p>
+   <p> É o rei Bradley, o líder do exército e chefe da nação. É muito interessante como a ira é dissimulada em vários momentos,
+     ocultando os ápices de suas ações raivosas. Ele consegue justificar e enviar tropas para vários locais de guerra, e parecer
+     que está fazendo o melhor para proteger a capital. É muito mais interessante pensar que ele é gentil ao atender seus subordinados,
+     sem se alterar em momentos de discordância. Mas é o que a ira faz de melhor: garante o menor número de exposição possível, 
+     de situações em que se pode justificar que há um desequilíbrio em suas atitudes e ideias. Porém isso não dura muito.</p>
    
+  
    <h4> SLOTH OU PREGUIÇA </h4>
-   <p> Sloth são duas pessoas diferentes: no anime é uma mulher muito bonita que pode transformar seu corpo em água, enquanto no mangá e 
-     no Brotherhood é um homem forte.</p>
+   <p> Personagem interessante: muito maior do que todos os outros homúnculos, muito mais forte (ele cava um túnel subterrâneo muito grande
+     em volta de todo o continente), mas sempre reclama que está cansado, que quer parar. Até para reclamar é preguiçoso, demora para 
+     articular as palavras e, mesmo muito forte e poderoso, tarda em produzir a escavação, isto é, é lento.</p>
+   
    
    <h4> PRIDE OU ORGULHO </h4>
-   <p>é criança prodígio dos sete. Dissimulado, mentiroso, além de manipulador de mão cheia. Tudo por conta de sua aparência inofensiva, mas de uma astúcia cruel. É, sem sombra de dúvida, o mais genial dentre os homúnculos, exatamente por sempre estar em vários lugares sem ser percebido, pela sua figura infantil.
-
-© obvious: http://obviousmag.org/solidao_sociavel/2017/os-sete-pecados-em-fullmetal-alchemist-brotherhood.html#ixzz5qegcPpyy 
-Follow us: @obvious on Twitter | obviousmagazine on Facebook</p>
+   <p> É criança prodígio dos sete. Dissimulado, mentiroso, além de manipulador de mão cheia. Tudo por conta de sua aparência inofensiva,
+     mas de uma astúcia cruel. É, sem sombra de dúvida, o mais genial dentre os homúnculos, exatamente por sempre estar em vários lugares
+     sem ser percebido, pela sua figura infantil.</p>
+   
    
    <h4> GREED OU GANÂNCIA </h4>
-   <p></p> 
+   <p> É um personagem interessante: egoísta de carteirinha, apenas quer saber de ter poder e comandar. Confiante por ser a armadura 
+     intransponível dos sete, capaz de criar uma camada de ferro em torno do corpo, peca pelo excesso, típico da ganância: é transformado,
+     por via de alquimia, e perde o que tem de mais poderoso durante a luta contra Edward.</p> 
    
+   
+    
     </div>
       </body>
 </html>
