--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
    
    <h4> ENVY OU INVEJA </h4>
    <p> É, declaradamente, o mais cretino de todos. É o estopim de todas as grandes confusões, é o assassino do Hughes, uma das cenas mais
-     dolorosas para fãs de anime em geral. Reiteradamente, sempre ele é a motivação para que se crie um problema, sempre é ele que se 
-     transforma em alguém e desequilibra a balança na história. É o mais cretino, isso é fato!</p>
+     dolorosas para fãs de anime em geral.<br> Reiteradamente, sempre ele é a motivação para que se crie um problema, sempre é ele que se 
+     transforma em alguém e desequilibra a balança na história.<br> É o mais cretino, isso é fato!</p>
    
    
    <h4> LUST OU LÚXURIA </h4>   
-   <p> é uma personagem bem interessante: sendo a única mulher dos sete, ela faz jus a seu título: de corpo escultural, com uma beleza 
+   <p> É uma personagem bem interessante: sendo a única mulher dos sete, ela faz jus a seu título: de corpo escultural, com uma beleza 
      ímpar, sedutora e altamente manipuladora (não por ser mulher, mas por ser a personificação de tal pecado). É tradicionalmente a 
      <em>la femme fatale</em>. E é o caso sim. Sua beleza esconde uma frieza nas ações, assim como sua grande habilidade estar em esticar suas
      unhas como lâminas fortemente cortantes. Seu compasso entre a sedução e poder de perfuração é algo de extrema importância para a
