--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       
    
    <h4> ENVY OU INVEJA </h4>
-   <p> É, declaradamente, o mais cretino de todos. É o estopim de todas as grandes confusões, é o assassino do Hughes, uma das cenas mais
-     dolorosas para fãs de anime em geral.<br> Reiteradamente, sempre ele é a motivação para que se crie um problema, sempre é ele que se 
-     transforma em alguém e desequilibra a balança na história.<br> É o mais cretino, isso é fato!</p>
+   <p> É, declaradamente, o mais cretino de todos. É o estopim de todas as grandes confusões, é o assassino do Hughes, uma das cenas mais dolorosas para fãs de anime em geral.<br>
+     Reiteradamente, sempre ele é a motivação para que se crie um problema, sempre é ele que se transforma em alguém e desequilibra a balança na história.<br>
+     É o mais cretino, isso é fato!</p>
    
    
    <h4> LUST OU LÚXURIA </h4>   
