--- a/index.html
+++ b/index.html
@@ -18,29 +18,23 @@
    
    
    <h4> LUST OU LÚXURIA </h4>   
-   <p> É uma personagem bem interessante: sendo a única mulher dos sete, ela faz jus a seu título: de corpo escultural, com uma beleza 
-     ímpar, sedutora e altamente manipuladora (não por ser mulher, mas por ser a personificação de tal pecado). É tradicionalmente a 
-     <em>la femme fatale</em>. E é o caso sim. Sua beleza esconde uma frieza nas ações, assim como sua grande habilidade estar em esticar suas
-     unhas como lâminas fortemente cortantes. Seu compasso entre a sedução e poder de perfuração é algo de extrema importância para a
-     construção de quem é ela, além, obviamente, da falta de preocupação com o que for a seu redor, sempre agindo como quer.
-</p>   
+   <p> É uma personagem bem interessante: sendo a única mulher dos sete, ela faz jus a seu título: de corpo escultural, com uma beleza ímpar, sedutora e altamente manipuladora (não por ser mulher, mas por ser a personificação de tal pecado).<br>
+     É tradicionalmente a <em>la femme fatale</em>. E é o caso sim. Sua beleza esconde uma frieza nas ações, assim como sua grande habilidade estar em esticar suas unhas como lâminas fortemente cortantes.<br>
+     Seu compasso entre a sedução e poder de perfuração é algo de extrema importância para construção de quem é ela, além, obviamente, da falta de preocupação com o que for a seu redor, sempre agindo como quer.</p>   
    
    
    <h4> GLUTTONY OU GULA </h4>
-   <p> É o famoso glutão, a personificação da gula. O que é mais interessante nele é exatamente a capacidade de engolir o que quiser, 
-     sem ter o mínimo discernimento do que ingere. É a atitude perfeita de alguém sob o jugo do pecado capital: apenas comer por comer.
-     É óbvio que é uma carta na manga para os interesses do grande vilão, mas é interessante como existe um reflexo metafórico muito 
-     forte neste tipo de comportamento que ele assume: Gluttony é, com maestria, uma criatura quase que irracional, ou melhor, altamente
-     infantilizada. Suas atitudes se resumem a não raciocinar muito ou querer devorar o que vê pela frente, o que gera uma grande 
-     mudança em seu rosto e traços.</p>
+   <p> É o famoso glutão, a personificação da gula. O que é mais interessante nele é exatamente a capacidade de engolir o que quiser, sem ter o mínimo discernimento do que ingere.<br>
+     É a atitude perfeita de alguém sob o jugo do pecado capital: apenas comer por comer. É óbvio que é uma carta na manga para os interesses do grande vilão, mas é interessante como existe um reflexo metafórico muito forte neste tipo de comportamento que ele assume:<br>
+     Gluttony é, com maestria, uma criatura quase que irracional, ou melhor, altamente infantilizada.<br>
+      Suas atitudes se resumem a não raciocinar muito ou querer devorar o que vê pela frente, o que gera uma grande mudança em seu rosto e traços.</p>
    
   
    <h4> WRATH OU IRA </h4>
-   <p> É o rei Bradley, o líder do exército e chefe da nação. É muito interessante como a ira é dissimulada em vários momentos,
-     ocultando os ápices de suas ações raivosas. Ele consegue justificar e enviar tropas para vários locais de guerra, e parecer
-     que está fazendo o melhor para proteger a capital. É muito mais interessante pensar que ele é gentil ao atender seus subordinados,
-     sem se alterar em momentos de discordância. Mas é o que a ira faz de melhor: garante o menor número de exposição possível, 
-     de situações em que se pode justificar que há um desequilíbrio em suas atitudes e ideias. Porém isso não dura muito.</p>
+   <p> É o rei Bradley, o líder do exército e chefe da nação. É muito interessante como a ira é dissimulada em vários momentos, ocultando os ápices de suas ações raivosas.<br>
+     Ele consegue justificar e enviar tropas para vários locais de guerra, e parecer que está fazendo o melhor para proteger a capital.<br>
+     É muito mais interessante pensar que ele é gentil ao atender seus subordinados, sem se alterar em momentos de discordância. Mas é o que a ira faz de melhor:<br>
+     garante o menor número de exposição possível, de situações em que se pode justificar que há um desequilíbrio em suas atitudes e ideias. Porém isso não dura muito.</p>
    
   
    <h4> SLOTH OU PREGUIÇA </h4>
