--- a/index.html
+++ b/index.html
@@ -38,21 +38,18 @@
    
   
    <h4> SLOTH OU PREGUIÇA </h4>
-   <p> Personagem interessante: muito maior do que todos os outros homúnculos, muito mais forte (ele cava um túnel subterrâneo muito grande
-     em volta de todo o continente), mas sempre reclama que está cansado, que quer parar. Até para reclamar é preguiçoso, demora para 
-     articular as palavras e, mesmo muito forte e poderoso, tarda em produzir a escavação, isto é, é lento.</p>
+   <p> Personagem interessante: muito maior do que todos os outros homúnculos, muito mais forte (ele cava um túnel subterrâneo muito grande em volta de todo o continente), mas sempre reclama que está cansado, que quer parar.<br>
+     Até para reclamar é preguiçoso, demora para articular as palavras e, mesmo muito forte e poderoso, tarda em produzir a escavação, isto é, é lento.</p>
    
    
    <h4> PRIDE OU ORGULHO </h4>
-   <p> É criança prodígio dos sete. Dissimulado, mentiroso, além de manipulador de mão cheia. Tudo por conta de sua aparência inofensiva,
-     mas de uma astúcia cruel. É, sem sombra de dúvida, o mais genial dentre os homúnculos, exatamente por sempre estar em vários lugares
-     sem ser percebido, pela sua figura infantil.</p>
+   <p> É criança prodígio dos sete. Dissimulado, mentiroso, além de manipulador de mão cheia. Tudo por conta de sua aparência inofensiva, mas de uma astúcia cruel.<br>
+     É, sem sombra de dúvida, o mais genial dentre os homúnculos, exatamente por sempre estar em vários lugares sem ser percebido, pela sua figura infantil.</p>
    
    
    <h4> GREED OU GANÂNCIA </h4>
-   <p> É um personagem interessante: egoísta de carteirinha, apenas quer saber de ter poder e comandar. Confiante por ser a armadura 
-     intransponível dos sete, capaz de criar uma camada de ferro em torno do corpo, peca pelo excesso, típico da ganância: é transformado,
-     por via de alquimia, e perde o que tem de mais poderoso durante a luta contra Edward.</p> 
+   <p> É um personagem interessante: egoísta de carteirinha, apenas quer saber de ter poder e comandar. Confiante por ser a armadura intransponível dos sete, capaz de criar uma camada de ferro em torno do corpo, peca pelo excesso, típico da ganância:<br>
+     é transformado, por via de alquimia, e perde o que tem de mais poderoso durante a luta contra Edward.</p> 
    
    
     
