--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> PECADOS DE FULLMETAL ALQUIMIST </title>
     <meta charset="utf-8">
   </head>
-  <body>
+  <body bgcolor="000000">
   
  <div align="center"> <h1 style="text-align: auto"> UM POUCO SOBRE OS PECADOS DE FULLMETAL ALCHEMIST </h1>
      <img src = "https://4.bp.blogspot.com/-9H61I08oC7Y/WtYDewRP_1I/AAAAAAAANbA/zLdzQVmfpjQ3JvbmfYHl_dtYeQZsL2B3QCLcBGAs/s1600/234872.jpg" 
