--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <title> ***PECADOS DE FULLMETAL ALQUIMIST*** </title>
     <meta charset="utf-8">
   </head>
-  <body bgcolor="000000">
+  <body bgcolor="0F0F00">
   
  <div align="center"> <h1 style="text-align: auto"> UM POUCO SOBRE OS PECADOS DE FULLMETAL ALCHEMIST </h1>
      <img src = "https://4.bp.blogspot.com/-9H61I08oC7Y/WtYDewRP_1I/AAAAAAAANbA/zLdzQVmfpjQ3JvbmfYHl_dtYeQZsL2B3QCLcBGAs/s1600/234872.jpg" 
       alt= "SETE PECADOS" style="width:1500px;" style="height:2000px;">
       
    
-   <h4> ENVY OU INVEJA </h4>
-   <p> É, declaradamente, o mais cretino de todos. É o estopim de todas as grandes confusões, é o assassino do Hughes, uma das cenas mais dolorosas para fãs de anime em geral.<br>
+   <h4> <font color ="white"> ENVY OU INVEJA </h4>
+   <p> <font color ="white"> É, declaradamente, o mais cretino de todos. É o estopim de todas as grandes confusões, é o assassino do Hughes, uma das cenas mais dolorosas para fãs de anime em geral.<br>
      Reiteradamente, sempre ele é a motivação para que se crie um problema, sempre é ele que se transforma em alguém e desequilibra a balança na história.<br>
      É o mais cretino, isso é fato!</p>
    
