--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title> <font color ="white"> ***PECADOS DE FULLMETAL ALQUIMIST*** </title>
+    <title> ***PECADOS DE FULLMETAL ALQUIMIST*** </title>
     <meta charset="utf-8">
   </head>
   <body bgcolor="000000">
-  
+  <font color ="white">
  <div align="center"> <h1 style="text-align: auto"> UM POUCO SOBRE OS PECADOS DE FULLMETAL ALCHEMIST </h1>
      <img src = "https://4.bp.blogspot.com/-9H61I08oC7Y/WtYDewRP_1I/AAAAAAAANbA/zLdzQVmfpjQ3JvbmfYHl_dtYeQZsL2B3QCLcBGAs/s1600/234872.jpg" 
       alt= "SETE PECADOS" style="width:1500px;" style="height:2000px;">
