--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title> ***PECADOS DE FULLMETAL ALQUIMIST*** </title>
+    <title> PECADOS DE FULLMETAL ALQUIMIST </title>
     <meta charset="utf-8">
   </head>
   <body bgcolor="000000">
